# cram-books-mcp

./: .gitignore  .server.py.swo  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  生徒マスター - 生徒一覧.csv
apps/gas/: .clasp.dev.json  .clasp.prod.json  .claspignore  .prod_deploy_id  _tmp_table_read.json  deploy_and_test.sh  esbuild.mjs  package-lock.json  package.json  tsconfig.json
apps/gas/src/: config.ts  index.ts
apps/gas/src/handlers/: books.ts  planner.ts  planner_monthly.ts  students.ts
apps/gas/src/lib/: common.ts  id_rules.ts  sheet_utils.ts
apps/gas/src/tests/: dev_tests.ts
apps/mcp/: .env.example  Dockerfile  README.md  pyproject.toml  server.py
apps/mcp/tests/: run_tests.py
docs/: POST_and_ExecutionAPI_Troubleshooting.md  planner_monthly.md  speed_planner_weekly.md
scripts/: deploy_mcp.sh  gcloud_env.example
src/cram_books_mcp/: __init__.py
